# splitter

./: CMakeLists.txt  CMakeSettings.json  README.md  splitter.cpp  splitter.h
